--- a/app/styles/components/user.scss
+++ b/app/styles/components/user.scss
@@ -1,23 +1,19 @@
 .user{
-	color:white;
+
+	color:#000;
 	list-style:none;
-	width: 30%;
+	// width: 30%;
 	border:3px solid #000;
 	border-radius:20px;
-	background: blue;
 	display:inline-block;
-    margin-right: 3%;
-    margin-bottom: 2%;
-	padding: 1em;
-    text-align: center;
+  // margin-right: 3%;
+  // margin-bottom: 2%;
+	// padding: 1em;
+  text-align: center;
 
-	ul{
-		list-style:none;
-		margin: 0;	
-	}
-
-	.user-name{
-		background:#02ffff;
-		color:#736666;
-	}
+	ul{ list-style:none; margin: 0; }
+	.user-name{font-weight: bold;}
+	.close-button{position: absolute;top: 0;left: 0;width: 25px;height: 25px;}
+	.modal{background: #fff;}
+	.button{margin-bottom: 0; margin-top: 1em;}
 }
