--- a/app/styles/components/user.scss
+++ b/app/styles/components/user.scss
@@ -2,13 +2,10 @@
 
 	color:#000;
 	list-style:none;
-	// width: 30%;
 	border:3px solid #000;
 	border-radius:20px;
 	display:inline-block;
-  // margin-right: 3%;
-  // margin-bottom: 2%;
-	// padding: 1em;
+  margin-bottom: 2%;
   text-align: center;
 
 	ul{ list-style:none; margin: 0; }
